--- a/src/app/home/connectors-manage/connectors-manage.component.html
+++ b/src/app/home/connectors-manage/connectors-manage.component.html
@@ -34,7 +34,8 @@
             <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4">
                 <div class="form-group">
                     <label class="text-secondary font-12 fw-500" for="type">Select Connector Type</label>
-                    <select id="type" class="form-control" [(ngModel)]="connector.type" [disabled]="!edit.status" (ngModelChange)="onTypeChange($event)">
+                    <select id="type" class="form-control" [(ngModel)]="connector.type" [disabled]="!edit.status"
+                        (ngModelChange)="onTypeChange($event)">
                         <option value="">--select--</option>
                         <option value="MONGODB">MongoDB</option>
                         <option value="MYSQL">MySQL</option>
@@ -46,7 +47,8 @@
                 </div>
                 <ng-container *ngIf="connector.type=='MONGODB'">
                     <div class="form-group">
-                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
+                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection
+                            URL</label>
                         <input id="connectionString" type="text" class="form-control"
                             [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
                     </div>
@@ -75,6 +77,15 @@
                 </ng-container>
                 <ng-container *ngIf="connector.type=='SFTP'">
                     <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="sftpAuthType">SFTP Auth Type</label>
+                        <select id="sftpAuthType" class="form-control" [(ngModel)]="connector.values.sftpAuthType"
+                            [disabled]="!edit.status">
+                            <option value="none">None</option>
+                            <option value="password">Password</option>
+                            <option value="publickey">Public Key</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label class="text-secondary font-12 fw-500" for="host">SFTP Host</label>
                         <input id="host" type="text" class="form-control" [(ngModel)]="connector.values.host"
                             [disabled]="!edit.status">
@@ -85,29 +96,59 @@
                             [disabled]="!edit.status">
                     </div>
                     <div class="form-group">
-                        <label class="text-secondary font-12 fw-500" for="keyFile">SFTP Key File</label>
-                        <input id="keyFile" type="text" class="form-control" [(ngModel)]="connector.values.port"
+                        <label class="text-secondary font-12 fw-500" for="username">SFTP Username</label>
+                        <input id="username" type="text" class="form-control" [(ngModel)]="connector.values.username"
                             [disabled]="!edit.status">
                     </div>
+                    <div *ngIf="connector.values.sftpAuthType=='publickey'" class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="keyFile">SFTP Public Key</label>
+                        <textarea id="keyFile" type="text" class="form-control" [(ngModel)]="connector.values.publicKey"
+                            [disabled]="!edit.status"></textarea>
+                    </div>
                     <div class="form-group">
-                        <label class="text-secondary font-12 fw-500" for="keyFilePassword">SFTP Key File Password</label>
-                        <input id="keyFilePassword" type="password" class="form-control"
+                        <label *ngIf="connector.values.sftpAuthType=='publickey'" class="text-secondary font-12 fw-500"
+                            for="password">SFTP Key File Passphrase</label>
+                        <label *ngIf="connector.values.sftpAuthType=='password'" class="text-secondary font-12 fw-500"
+                            for="password">Password</label>
+                        <input id="password" type="password" class="form-control"
                             [(ngModel)]="connector.values.password" [disabled]="!edit.status">
                     </div>
                 </ng-container>
                 <ng-container *ngIf="connector.type=='KAFKA'">
                     <div class="form-group">
-                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
-                        <input id="connectionString" type="text" class="form-control"
-                            [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
+                        <label class="text-secondary font-12 fw-500" for="connectionString">Bootstrap Servers</label>
+                        <textarea id="connectionString" type="text" class="form-control"
+                            [(ngModel)]="connector.values.servers" [disabled]="!edit.status"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="username">Username</label>
+                        <input id="username" type="text" class="form-control" [(ngModel)]="connector.values.username"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="password">Password</label>
+                        <input id="password" type="password" class="form-control"
+                            [(ngModel)]="connector.values.password" [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="protocol">Security Protocol</label>
+                        <input id="protocol" type="text" class="form-control" [(ngModel)]="connector.values.protocol"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="mechanisms">Mechanisms</label>
+                        <input id="mechanisms" type="text" class="form-control"
+                            [(ngModel)]="connector.values.mechanisms" [disabled]="!edit.status">
                     </div>
                 </ng-container>
                 <ng-container *ngIf="connector.type=='AZBLOB'">
                     <div class="form-group">
-                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
+                        <label class="text-secondary font-12 fw-500" for="connectionString">Azure Connection
+                            URL</label>
                         <input id="connectionString" type="text" class="form-control"
                             [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
                     </div>
+
                 </ng-container>
             </div>
         </div>
