Azure blob changes -1

--- a/src/app/home/schema-utils/configuration/configuration.component.html
+++ b/src/app/home/schema-utils/configuration/configuration.component.html
@@ -12,11 +12,17 @@
         <span class="hover" (click)="activeTab=3" [ngClass]="{'text-dark fw-600': activeTab==3}" id="postHooks">Common
           Settings</span>
       </div>
+      <div class="p-2 mb-3 w-100 d-flex justify-content-between" *ngIf="canView('S')">
+        <span class="hover" (click)="activeTab=4" [ngClass]="{'text-dark fw-600': activeTab==4}" id="fileSettings">File
+          Settings</span>
+      </div>
     </div>
   </div>
   <div class="content w-100">
-    <odp-data-settings *ngIf="activeTab==1" [form]="form" [edit]="edit" [versionConfig]="versionConfig" ></odp-data-settings>
+    <odp-data-settings *ngIf="activeTab==1" [form]="form" [edit]="edit" [versionConfig]="versionConfig">
+    </odp-data-settings>
     <odp-search-settings *ngIf="activeTab==2" [form]="form" [edit]="edit"></odp-search-settings>
     <odp-common-settings *ngIf="activeTab==3" [form]="form" [edit]="edit"></odp-common-settings>
+    <odp-file-settings *ngIf="activeTab==4" [form]="form" [edit]="edit"></odp-file-settings>
   </div>
 </div>
