--- a/src/app/home/schema-utils/configuration/file-settings/file-settings.component.html
+++ b/src/app/home/schema-utils/configuration/file-settings/file-settings.component.html
@@ -14,8 +14,8 @@
           Gridfs
         </label>
         <label ngbButtonLabel class="btn btn-outline-dark">
-          <input ngbButton type="radio" value="azure" [disabled]="!edit.status || !canEdit('S')"
-            [checked]="type === 'azure'" />
+          <input ngbButton type="radio" value="AZBLOB" [disabled]="!edit.status || !canEdit('S')"
+            [checked]="type === 'AZBLOB'" />
           Azure blob
         </label>
       </div>
