--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -94,6 +94,10 @@
             <span class="font-11 fw-400 dsi dsi-invoke-api mr-2"></span>
             <span class="font-12 fw-400">Invoke API</span>
         </div>
+        <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('CONNECTOR')">
+            <span class="font-11 fw-400 dsi dsi-connector mr-2"></span>
+            <span class="font-12 fw-400">Connector</span>
+        </div>
         <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('DATASERVICE')">
             <span class="font-12 fw-400 dsi dsi-data-service mr-2"></span>
             <span class="font-12 fw-400">Data Service</span>
