--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/sftp-connector/sftp-connector.component.html
@@ -2,6 +2,10 @@
     <label for="directoryPath">Directory Path</label>
     <input id="directoryPath" class="form-control" type="text" [(ngModel)]="currNode.options.directoryPath">
 </div>
+<div class="form-group">
+    <label for="filePattern">File Pattern</label>
+    <input id="filePattern" class="form-control" type="text" [(ngModel)]="currNode.options.filePattern">
+</div>
 <div class="d-flex flex-column">
     <div class="form-group d-flex align-items-center">
         <odp-checkbox [edit]="edit" [(checked)]="currNode.options.get" (checkedChange)="setSFTPAction('get',$event)">
