--- a/src/app/home/connectors/connectors.component.html
+++ b/src/app/home/connectors/connectors.component.html
@@ -130,6 +130,7 @@
             <option value="SFTP">SFTP</option>
             <option value="KAFKA">Apache Kafka</option>
             <option value="AZBLOB">Azure Blob</option>
+            <option value="S3">S3</option>
         </select>
     </div>
     </div>
